--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-  Willkommen
-  gib Deinen Namen ein:
+  <div>Willkommen</div>
+  <div>gib Deinen Namen ein:</div>
   <input type="text">
-  Herzlich Willkommen
+  <div class="welcome">Herzlich Willkommen</div>
+
 
 </body>
 
