--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-  <div>Willkommen</div>
-  <div>gib Deinen Namen ein:</div>
-  <input type="text">
-  <div class="welcome">Herzlich Willkommen</div>
-
+  <div id="title01">Willkommen</div>
+  <div id="label01">Gib Deinen Namen ein:</div>
+  <input type="text" id="input01">
+  <div id="welcome">Herzlich Willkommen</div>
+  <div id="footer"></div>
 
 </body>
 
