--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <div id="label01">Gib Deinen Namen ein:</div>
   <input type="text" id="input01">
   <div id="welcome">Herzlich Willkommen</div>
+
+  <div class="box-main" id="b1"></div>
+  <div class="box-main" id="b2"></div>
+  <div class="box-main" id="b3"></div>
+  <div class="box-main" id="b4"></div>
+
   <div id="footer"></div>
 
 </body>
