new project - hr management

--- a/index.html
+++ b/index.html
@@ -5,22 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome</title>
+  <title>HR Management</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div id="title01">Willkommen</div>
-  <div id="label01">Gib Deinen Namen ein:</div>
-  <input type="text" id="input01">
-  <div id="welcome">Herzlich Willkommen</div>
 
-  <div class="box-main" id="b1"></div>
-  <div class="box-main" id="b2"></div>
-  <div class="box-main" id="b3"></div>
-  <div class="box-main" id="b4"></div>
-
-  <div id="footer"></div>
 
 </body>
 
